methods.picture.MethodsPicture.scala.error
Erreur de compilation :
MethodsPicture:4: error: not found: value color
  faireV(color.yellow)
         ^MethodsPicture:11: error: not found: value color
  faireV(color.red)
         ^MethodsPicture:18: error: not found: value color
  faireV(color.blue)
         ^MethodsPicture:25: error: not found: value color
  faireV(color.green)
         ^