methods.picture.MethodsPicture.scala.code
override def run() {
  avance()
  avance()
  faireV(color.yellow)
  avance()
  avance()
  gauche()
  
  avance()
  avance()
  faireV(color.red)
  avance()
  avance()
  gauche()
  
  avance()
  avance()
  faireV(color.blue)
  avance()
  avance()
  gauche()
  
  avance()
  avance()
  faireV(color.green)
  avance()
  avance()
  gauche()
  
  var i=0
  for (i<-0 to 6){
    avance()
  }
}


def faireV(c:Color){
  setCouleurBrosse(c)
  
  baisseBrosse()
  leveBrosse()
  
  gauche()
  avance()
  droite()
  avance()
  
  baisseBrosse()
  leveBrosse()
  
  avance()
  droite()
  avance()
  gauche()
  
  baisseBrosse()
  leveBrosse()
}